package com.nijunyang.designpatterns.proxy.cglibproxy;

/**
 * @author: create by nijunyang
 * @date:2019/10/5
 */
public class TeacherLi {
    public void teach() {
        System.out.println("上数学课...cglib");
    }
}
